# pokemon-type-classification

./: .gitignore  README.md  downloader.py  icc_profile.py  main.py  pyproject.toml  training.py
notebooks/representation/: classifier_performance.ipynb  decomposition.ipynb  lda_colab.ipynb  pca.ipynb
